Misc cleanup around HandRestock, AutoIframePlacer